--- a/src/components/ClienteCadastro/clienteCadastro.scss
+++ b/src/components/ClienteCadastro/clienteCadastro.scss
@@ -37,9 +37,21 @@
           border-color: #007bff;
           box-shadow: 0 0 0 0.25rem rgba(0, 123, 255, 0.25);
         }
+
+        &.input-error {
+          border-color: red;
+        }
+      }
+
+      .error-message {
+        color: red;
+        font-size: 0.8em;
+        margin-top: 5px;
+        margin-left: 5px;
       }
     }
   }
+
   button {
     padding: 10px;
     background-color: #007bff;
@@ -50,6 +62,11 @@
 
     &:hover {
       background-color: #0069d9;
+    }
+
+    &:disabled {
+      background-color: #cccccc;
+      cursor: not-allowed;
     }
   }
 
